--- a/Lab 2 rain.ipynb
+++ b/Lab 2 rain.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pylab as plt\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n"
    ]
   },
   {
@@ -6637,13 +6637,6 @@
     "print (\"recall = \", metrics.recall_score(y_true=true_pred, y_pred=predictions))\n",
     "print (\"f1 = \", metrics.f1_score(y_true=true_pred, y_pred=predictions))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
