--- a/Lab2.ipynb
+++ b/Lab2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        "(303, 14)"
       ]
      },
-     "execution_count": 382,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "4   0     2       1  "
       ]
      },
-     "execution_count": 383,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,12 +196,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "X, y = dataset.iloc[:, :-1], dataset.iloc[:, -1:]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "165"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y[y.target == 1].size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -212,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +387,7 @@
        "4  0.583939  1.435481 -0.379244  0.976352 -0.714429 -0.512922  "
       ]
      },
-     "execution_count": 385,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,35 +400,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([3, 0, 0, 0, 2, 0, 2, 0, 3, 0, 0, 2, 0, 1, 3, 2, 2, 2, 0, 2, 0, 0,\n",
-       "       0, 3, 0, 2, 3, 0, 3, 3, 0, 0, 0, 2, 0, 2, 3, 0, 2, 2, 2, 0, 1, 2,\n",
-       "       0, 0, 0, 0, 2, 2, 2, 2, 1, 0, 2, 0, 0, 0, 0, 2, 3, 0, 0, 0, 3, 0,\n",
-       "       0, 2, 0, 2, 0, 0, 0, 0, 0, 2, 3, 0, 3, 1, 0, 0, 2, 3, 2, 2, 0, 0,\n",
-       "       2, 2, 3, 0, 0, 3, 0, 1, 2, 3, 0, 3, 0, 1, 2, 3, 0, 2, 3, 2, 2, 2,\n",
-       "       2, 3, 2, 0, 0, 0, 0, 0, 0, 2, 1, 0, 0, 2, 0, 0, 0, 2, 2, 2, 2, 2,\n",
-       "       0, 0, 2, 2, 3, 3, 1, 1, 2, 0, 0, 2, 2, 2, 2, 2, 0, 0, 2, 2, 2, 2,\n",
-       "       2, 2, 0, 0, 1, 0, 0, 2, 0, 0, 0, 1, 1, 1, 1, 3, 3, 0, 2, 0, 1, 1,\n",
-       "       3, 2, 1, 1, 1, 1, 2, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 2, 1, 0, 3,\n",
-       "       1, 2, 0, 1, 1, 3, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 3, 3, 2, 3, 1, 3,\n",
-       "       1, 1, 3, 3, 1, 1, 1, 1, 2, 1, 0, 3, 1, 1, 1, 0, 0, 1, 1, 0, 1, 2,\n",
-       "       1, 1, 1, 0, 1, 1, 0, 1, 1, 3, 3, 1, 2, 1, 1, 1, 2, 0, 3, 0, 1, 1,\n",
-       "       1, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 0, 1, 0, 3, 1, 1, 3, 3, 0, 1, 1,\n",
-       "       0, 0, 1, 1, 0, 1, 3, 2, 1, 1, 2, 3, 1, 0, 3, 1, 2])"
+       "array([4, 3, 1, 1, 2, 1, 2, 1, 4, 1, 1, 2, 1, 3, 4, 2, 2, 3, 1, 2, 1, 1,\n",
+       "       1, 4, 1, 2, 4, 1, 4, 4, 1, 1, 1, 3, 3, 3, 4, 3, 2, 2, 2, 1, 0, 2,\n",
+       "       1, 1, 1, 1, 2, 2, 2, 2, 3, 1, 2, 1, 1, 1, 1, 2, 4, 1, 3, 1, 4, 1,\n",
+       "       3, 2, 1, 2, 3, 1, 1, 1, 1, 2, 4, 1, 1, 3, 1, 1, 2, 4, 2, 2, 3, 1,\n",
+       "       2, 2, 4, 1, 1, 4, 1, 0, 2, 4, 1, 4, 3, 3, 2, 3, 1, 2, 4, 2, 2, 2,\n",
+       "       2, 4, 2, 1, 1, 1, 3, 3, 1, 2, 2, 1, 1, 2, 1, 1, 1, 2, 2, 2, 2, 2,\n",
+       "       1, 1, 1, 2, 4, 4, 0, 0, 2, 1, 1, 2, 2, 2, 2, 2, 1, 1, 2, 2, 3, 2,\n",
+       "       1, 2, 1, 1, 0, 1, 3, 2, 1, 1, 1, 0, 0, 0, 0, 0, 4, 3, 3, 3, 0, 0,\n",
+       "       4, 2, 0, 0, 0, 0, 2, 3, 0, 1, 0, 0, 3, 1, 0, 0, 0, 0, 3, 0, 3, 4,\n",
+       "       0, 2, 1, 0, 0, 4, 0, 1, 0, 0, 3, 1, 3, 0, 1, 0, 4, 4, 2, 4, 0, 4,\n",
+       "       0, 0, 4, 4, 0, 0, 0, 0, 3, 0, 1, 4, 0, 0, 0, 1, 1, 0, 0, 1, 0, 2,\n",
+       "       0, 0, 0, 1, 0, 0, 1, 3, 0, 4, 4, 0, 3, 0, 0, 0, 2, 3, 4, 1, 0, 0,\n",
+       "       0, 0, 0, 3, 0, 0, 1, 3, 0, 1, 0, 1, 0, 1, 4, 0, 0, 4, 4, 1, 0, 0,\n",
+       "       3, 1, 0, 0, 1, 0, 4, 3, 0, 0, 2, 4, 0, 3, 4, 0, 2])"
       ]
      },
-     "execution_count": 386,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = KMeans(n_clusters=4, random_state=42)\n",
+    "model = KMeans(n_clusters=5, random_state=42)\n",
     "\n",
     "model.fit(X)\n",
     "predictions = model.predict(X)\n",
@@ -411,48 +438,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 1 1 1 1 1 1 0 1 1 1 1 0 0 1 1 1 1 1 1 1 1 0 1 1 0 1 0 0 1 1 1 1 1 1 0\n",
-      " 1 1 1 1 1 0 1 1 1 1 1 1 1 1 1 0 1 1 1 1 1 1 1 0 1 1 1 0 1 1 1 1 1 1 1 1 1\n",
-      " 1 1 0 1 0 0 1 1 1 0 1 1 1 1 1 1 0 1 1 0 1 0 1 0 1 0 1 0 1 0 1 1 0 1 1 1 1\n",
-      " 0 1 1 1 1 1 1 1 1 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 1 1 1 1 1 1 1 1\n",
-      " 1 1 1 1 1 1 1 1 1 1 0 1 1 1 1 1 1 0 0 0 0 0 0 1 1 1 0 0 0 1 0 0 0 0 1 1 0\n",
-      " 1 0 0 1 1 0 0 0 0 1 0 1 0 0 1 1 0 0 0 0 1 0 0 0 1 1 0 1 0 0 0 1 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 1 0 1 0 0 0 0 1 1 0 0 1 0 1 0 0 0 1 0 0 1 0 0 0 0 0 1 0 0 0 1\n",
-      " 1 0 1 0 0 0 0 0 1 0 0 1 0 0 1 0 1 0 1 0 0 0 0 0 1 0 0 1 1 0 0 1 0 0 1 0 0\n",
-      " 1 0 0 1 0 0 1]\n"
+      "[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 0 1 1 1 1 1 1 0 0 0 0 0 1 1 1 1 0 0 1 1 0 0 0 0 1 1 0\n",
+      " 1 0 0 1 1 0 0 0 0 1 0 1 1 0 1 1 0 0 1 0 1 0 0 1 1 1 0 1 0 1 1 1 1 0 1 0 0\n",
+      " 1 1 0 0 0 0 1 0 1 1 0 0 0 1 1 0 0 1 0 1 0 0 0 1 0 0 1 1 0 1 1 0 1 0 0 0 1\n",
+      " 1 1 1 0 0 0 0 0 1 0 0 1 1 0 1 0 1 0 1 1 0 0 1 1 1 0 0 1 1 0 0 1 0 1 1 0 0\n",
+      " 1 1 0 1 1 0 1]\n"
      ]
     }
    ],
    "source": [
     "predictions[predictions == 0] = 50\n",
-    "predictions[predictions == 1] = 0\n",
+    "predictions[predictions == 1] = 1\n",
     "predictions[predictions == 2] = 1\n",
-    "predictions[predictions == 3] = 0\n",
-    "predictions[predictions == 50] = 1\n",
+    "predictions[predictions == 3] = 1\n",
+    "predictions[predictions == 4] = 1\n",
+    "predictions[predictions == 50] = 0\n",
     "\n",
     "print(predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy =  0.7524752475247525\n",
-      "precision =  0.7556818181818182\n",
-      "recall =  0.806060606060606\n",
-      "f1 =  0.780058651026393\n"
+      "accuracy =  0.7656765676567657\n",
+      "precision =  0.7079646017699115\n",
+      "recall =  0.9696969696969697\n",
+      "f1 =  0.8184143222506394\n"
      ]
     }
    ],
@@ -468,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -497,42 +525,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([3, 4, 2, 4, 2, 1, 2, 4, 3, 4, 4, 2, 4, 1, 3, 2, 2, 2, 4, 2, 4, 4,\n",
-       "       4, 3, 4, 2, 3, 4, 3, 3, 2, 4, 4, 4, 1, 2, 3, 4, 2, 2, 2, 4, 1, 2,\n",
-       "       4, 4, 4, 4, 3, 2, 2, 4, 1, 2, 2, 4, 4, 4, 4, 2, 3, 4, 4, 1, 3, 2,\n",
-       "       1, 2, 4, 2, 4, 1, 4, 4, 2, 2, 3, 4, 3, 1, 4, 4, 2, 4, 2, 2, 4, 3,\n",
-       "       2, 2, 3, 4, 1, 3, 2, 1, 2, 3, 4, 3, 4, 1, 2, 4, 4, 2, 3, 2, 2, 2,\n",
-       "       2, 3, 2, 4, 4, 2, 4, 4, 2, 2, 1, 4, 2, 2, 2, 2, 4, 2, 2, 2, 2, 2,\n",
-       "       4, 4, 2, 2, 3, 3, 1, 1, 2, 4, 2, 2, 2, 4, 2, 2, 4, 4, 1, 2, 4, 2,\n",
-       "       2, 2, 4, 4, 1, 4, 4, 2, 4, 1, 1, 1, 1, 1, 1, 1, 3, 4, 4, 1, 1, 1,\n",
-       "       3, 4, 1, 1, 1, 1, 2, 4, 1, 4, 4, 1, 4, 4, 2, 1, 1, 1, 4, 1, 4, 3,\n",
-       "       1, 1, 4, 1, 1, 3, 1, 4, 1, 1, 1, 4, 4, 1, 1, 2, 3, 1, 2, 3, 1, 3,\n",
-       "       2, 1, 3, 1, 1, 1, 1, 1, 4, 1, 4, 1, 1, 1, 1, 4, 1, 1, 1, 4, 1, 2,\n",
-       "       1, 1, 1, 4, 2, 1, 4, 1, 1, 3, 1, 1, 4, 1, 1, 1, 2, 4, 1, 4, 1, 2,\n",
-       "       1, 1, 2, 1, 1, 1, 4, 1, 1, 4, 1, 4, 1, 4, 3, 1, 1, 3, 3, 4, 1, 1,\n",
-       "       1, 4, 1, 1, 4, 1, 1, 4, 1, 1, 2, 1, 2, 4, 1, 1, 2], dtype=int32)"
+       "array([4, 5, 3, 5, 3, 2, 3, 5, 4, 5, 5, 3, 5, 1, 4, 3, 3, 3, 5, 3, 5, 5,\n",
+       "       5, 4, 5, 3, 4, 5, 4, 4, 3, 5, 5, 5, 1, 3, 4, 5, 3, 3, 3, 5, 1, 3,\n",
+       "       5, 5, 5, 5, 4, 3, 3, 5, 2, 3, 3, 5, 5, 5, 5, 3, 4, 5, 5, 2, 4, 3,\n",
+       "       1, 3, 5, 3, 5, 1, 5, 5, 3, 3, 4, 5, 4, 1, 5, 5, 3, 5, 3, 3, 5, 4,\n",
+       "       3, 3, 4, 5, 2, 4, 3, 1, 3, 4, 5, 4, 5, 2, 3, 5, 5, 3, 4, 3, 3, 3,\n",
+       "       3, 4, 3, 5, 5, 3, 5, 5, 3, 3, 2, 5, 3, 3, 3, 3, 5, 3, 3, 3, 3, 3,\n",
+       "       5, 5, 3, 3, 4, 4, 2, 1, 3, 5, 3, 3, 3, 5, 3, 3, 5, 5, 2, 3, 5, 3,\n",
+       "       3, 3, 5, 5, 2, 5, 5, 3, 5, 2, 2, 2, 1, 2, 1, 2, 4, 5, 5, 2, 1, 1,\n",
+       "       4, 5, 1, 2, 1, 2, 3, 5, 1, 5, 5, 1, 5, 5, 3, 1, 1, 1, 5, 2, 5, 4,\n",
+       "       1, 2, 5, 1, 1, 4, 2, 5, 1, 2, 2, 5, 5, 1, 1, 3, 4, 2, 3, 4, 1, 4,\n",
+       "       3, 1, 4, 2, 1, 1, 1, 1, 5, 1, 5, 2, 1, 1, 2, 5, 2, 2, 2, 5, 1, 3,\n",
+       "       2, 1, 1, 5, 3, 2, 5, 2, 1, 4, 2, 1, 5, 2, 1, 1, 3, 5, 2, 5, 1, 3,\n",
+       "       1, 1, 3, 2, 1, 2, 5, 2, 1, 5, 1, 5, 1, 5, 4, 1, 2, 4, 4, 5, 1, 1,\n",
+       "       2, 5, 1, 1, 5, 2, 2, 5, 2, 1, 3, 2, 3, 5, 2, 1, 3], dtype=int32)"
       ]
      },
-     "execution_count": 390,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from scipy.cluster.hierarchy import fcluster\n",
-    "fcl = fcluster(mergings, 4, criterion=\"maxclust\")\n",
+    "fcl = fcluster(mergings, 5, criterion=\"maxclust\")\n",
     "fcl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -554,23 +582,24 @@
        "       0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 1, 1, 0, 0, 1], dtype=int32)"
       ]
      },
-     "execution_count": 391,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "fcl[fcl==1] = 0\n",
-    "fcl[fcl==2] = 1\n",
+    "fcl[fcl==2] = 0\n",
     "fcl[fcl==3] = 1\n",
     "fcl[fcl==4] = 1\n",
+    "fcl[fcl==5] = 1\n",
     "\n",
     "fcl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +644,7 @@
        "       1, 2, 1, 1, 2, 1, 1, 2, 1, 1, 2, 1, 2, 2, 1, 1, 2], dtype=int32)"
       ]
      },
-     "execution_count": 393,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +657,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "303"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y[y==1].size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +730,7 @@
        "       [0]])"
       ]
      },
-     "execution_count": 395,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
